
#
# Check for one project file
#
AC_INIT(src/fparser.cpp)

PRODUCT=fparser

#
# check cannonical system name
#
AC_CANONICAL_HOST
case "$host" in
*-linux-gnu )  SYSTEM=LINUX;  AC_DEFINE(LINUX) ;;
     *-aix* )  SYSTEM=AIX;    AC_DEFINE(AIX)   ;;
    *cygwin*)  SYSTEM=CYGWIN; AC_DEFINE(CYGWIN);;   
    *darwin*)  SYSTEM=DARWIN; AC_DEFINE(DARWIN);;
          * )  SYSTEM=UNIX;   AC_DEFINE(UNIX)  ;;
esac

#
# check C compiler, preprocesor, etc.
#
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_PROG(FIND, find, find, :)
AC_CHECK_PROG(MAKEDEPEND, makedepend, makedepend, :)

#
# Try to locate the X Window System include files and libraries
# and add /usr/local to include and lib path and add -lm (for testing)
#
CFLAGS="$CFLAGS "
LDFLAGS="$LDFLAGS -L/usr/local/lib"


#
# Declare variables which we want substituted in the Makefile.in's
#
AC_HEADER_STDC

#
# finally create makefiles using Makefile.in
#
AC_SUBST(SYSTEM)

echo
AC_OUTPUT(Makefile)

echo
echo "Run 'make depend' to create dependencies."
echo
